# nvjpeg2k-python

./: .gitignore  CMakeLists.txt  LICENSE  README.md  nvjpeg2k.cpp
assets/: demo.dcm.jp2
